--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul id="navlist" class="alignable pull-right navbar-ul">
                 <li class="alignable pull-left nav-list"><a href="/">CFP</a> /
                 </li>
-                <li class="alignable pull-left nav-list"><a href="/program/">Program</a> /
+                <li class="alignable pull-left nav-list"><a href="/program">Program</a> /
                 </li>
                 <li class="alignable pull-left nav-list"><a href="https://www.ndss-symposium.org/ndss2022/cfp-bar-workshop/">BAR'22</a> /
                 </li>
