--- a/program.html
+++ b/program.html
@@ -35,7 +35,7 @@
             <ul id="navlist" class="alignable pull-right navbar-ul">
                 <li class="alignable pull-left nav-list"><a href="/">CFP</a> /
                 </li>
-                <li class="alignable pull-left nav-list"><a href="/program/">Program</a> /
+                <li class="alignable pull-left nav-list"><a href="/program">Program</a> /
                 </li>
                 <li class="alignable pull-left nav-list"><a href="https://www.ndss-symposium.org/ndss2022/cfp-bar-workshop/">BAR'22</a> /
                 </li>
@@ -55,7 +55,7 @@
 
             <blockquote>
                 No program just yet — <b>we are currently accepting paper submissions!</b><br><br>
-                See our <a href="index.html">Call for Papers</a> and submit your awesome binary analysis work! 
+                See our <a href="/">Call for Papers</a> and submit your awesome binary analysis work! 
             </blockquote>
 
             <!--<table>
