--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h2 id="important-dates">Important Dates</h2>
 
             <ul>
-                <li>Paper submission: February 6, 2023 Anywhere-on-earth (AOE)</li>
-                <li>Acceptance notification: March 15, 2023</li>
-                <li>Camera-ready deadline: (post workshop)</li>
+                <li>Paper submission: January 3, 2023 Anywhere-on-earth (AOE)</li>
+                <li>Acceptance notification: February 6, 2023</li>
+                <li>Camera-ready deadline: March 15, 2023 (post workshop)</li>
                 <li>Workshop date: March 3, 2023 (co-located with <a href="https://www.ndss-symposium.org">NDSS 2023</a>)</li>
             </ul>
 
