--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 
         <div style="clear:both"></div><hr>    
         <div class="container content">     
-            <h2 id="call-for-papers-workshop-on-binary-analysis-research-bar-2023">Call for Papers: 2023 Workshop on Binary Analysis Research</h2>
+            <h1 id="call-for-papers-workshop-on-binary-analysis-research-bar-2023">Call for Papers: The 2023 Workshop on Binary Analysis Research (BAR'23)</h1>
 
-            <p align="justify">With the analysis of binary code more relevant than ever due to the proliferation of interconnected embedded devices, closed-source commercial and legacy software, and evasive malware and cyber-threats, the field of binary analysis has recently undergone a renaissance. Over the last decade, well over a dozen binary analysis frameworks have emerged from research groups and private enterprises, leaving our world with more mature binary analysis platforms than there are web browsers! Today, academic and industrial labs, funding agencies, and independent researchers continue to push the envelope of research on binary analysis. Yet, this binary analysis gold rush has evolved in a largely uncoordinated manner, with some researchers meeting up on an ad-hoc basis while others work alone in isolation.</p>
+            <p align="justify">With the analysis of binary code more relevant than ever due to the proliferation of interconnected embedded devices, closed-source commercial and legacy software, and evasive malware and cyber-threats, the field of binary analysis has recently undergone a renaissance. The last decade has seen the emergence of well over a dozen binary analysis frameworks, leaving our world with more mature binary analysis platforms today than there are web browsers! Academic research groups, government and industrial labs, and independent researchers around the globe continue to push the envelope of binary analysis. Yet, this binary analysis gold rush has evolved in a largely uncoordinated manner, leaving much of our community unconnected and working alone in isolation.</p>
 
-            <p align="justify">The <b>Binary Analysis Research Workshop (BAR)</b> aims to foster a space for the binary analysis research community to interact, network, and present their cutting-edge research, with half of the workshop dedicated to traditional paper sessions and the other half to a roundtable discussion among binary analysis researchers, developers, and practitioners. To this end, we welcome submissions on all aspects of binary analysis, including: security, reverse engineering, visualization, AI and ML, program analysis theory, human factors, gamification, tooling, and transition-to-practice.</p>
+            <p align="justify">The <b>Binary Analysis Research Workshop (BAR)</b> aims to create a space for the binary analysis research community to interact, foster collaboration, and present their cutting-edge works &mdash; with half of the workshop dedicated to traditional paper sessions and the other half to a roundtable discussion among binary analysis researchers, developers, and practitioners. To this end, <b>we welcome submissions on all aspects of binary analysis</b>, including: security, reverse engineering, visualization, AI and ML, theory, human factors, gamification, tool development, and transition-to-practice.</p>
+
+            <hr />
 
             <h2 id="important-dates">Important Dates</h2>
 
@@ -64,6 +66,8 @@
                 <li>Camera-ready deadline: March 15, 2023 (post workshop)</li>
                 <li>Workshop date: March 3, 2023 (co-located with <a href="https://www.ndss-symposium.org">NDSS 2023</a>)</li>
             </ul>
+
+            <hr />
 
             <h2 id="areas-of-interest">Areas of Interest</h2>
 
@@ -89,30 +93,38 @@
                 <li>Reports of and lessons-learned from applying previous approaches or replicating published papers.</li>
             </ul>
 
+            <hr />
+
             <h2 id="submission-instructions">Submission Instructions</h2>
 
-            <p>All papers must be written in English. Papers must be formatted for US letter size (not A4) paper in a two-column layout, with columns no more than 9.25 in. high and 3.5 in. wide. The text must be in Times font, 10-point or larger, with 11-point or larger line spacing. Authors are strongly encouraged to use the <a href="https://www.ndss-symposium.org/ndss2023/templates/">templates provided by NDSS</a>.</p>
+            <p align="justify">All papers must be written in English. Papers must be formatted for US letter size (not A4) paper in a two-column layout, with columns no more than 9.25 in. high and 3.5 in. wide. The text must be in Times font, 10-point or larger, with 11-point or larger line spacing. Authors are strongly encouraged to use the <a href="https://www.ndss-symposium.org/ndss2023/templates/">templates provided by NDSS</a>.</p>
 
-            <p>We invite both full papers and short papers. Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have less than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
+            <p align="justify">We invite both full papers and short papers. Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have less than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
 
             <p>Submissions must be properly anonymized for double-blind review (please follow NDSS guidelines on paper anonymization).</p>
 
             <p>Submission site: <a href="https://bar2023.hotcrp.com/">https://bar2023.hotcrp.com/</a></p>
 
+            <hr />
+
             <h2 id="workshop-format">Workshop Format</h2>
 
             <p>BAR will be co-located with NDSS 2023. BAR will be an on-site event.</p>
 
-            <p>One author of each accepted paper is expected to present the paper at the workshop. The format will be traditional conference-style research presentations with questions from the audience. Interactive and engaging presentations are welcomed. Following notification to authors, more information will be provided regarding speaking times and other details.</p>
+            <p align="justify">One author of each accepted paper is expected to present the paper at the workshop. The format will be traditional conference-style research presentations with questions from the audience. Interactive and engaging presentations are welcomed. Following notification to authors, more information will be provided regarding speaking times and other details.</p>
 
-            <p>The accepted papers will be made available on the workshop website and the workshop will have <em>official proceedings</em>. Publication in the proceedings is not mandatory and authors can choose to have their papers excluded from the official proceedings by selecting “No proceedings” during submission in HotCRP.</p>
+            <p align="justify">The accepted papers will be made available on the workshop website and the workshop will have <em>official proceedings</em>. Publication in the proceedings is not mandatory and authors can choose to have their papers excluded from the official proceedings by selecting “No proceedings” during submission in HotCRP.</p>
 
-            <h2 id="program-committee-co-chairs">Program Committee Co-Chairs</h2>
+            <hr />
+
+            <h2 id="program-committee-co-chairs">Workshop Co-Chairs</h2>
 
             <ul>
                 <li>Aravind Machiry, <em>Purdue University</em></li>
                 <li>Stefan Nagy, <em>University of Utah</em></li>
             </ul>
+
+            <hr />
 
             <h2 id="program-committee">Program Committee</h2>
 
@@ -144,6 +156,8 @@
 
         <!-- END PAGE BODY CONTENT -->
 
+        <br><br>
+
     </div>
         
     <script>
@@ -164,5 +178,4 @@
     </script>    
 </body>
 
-<footer>
-</footer>
+<footer></footer>
