--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <li>Sang Kil Cha, <em>KAIST</em></li>
                 <li>Santiago Torres-Arias, <em>Purdue University</em></li>
                 <li>Sarah Zennou, <em>Airbus</em></li>
+                <li>Scott Bauer, <em>Qualcomm</em></li>
                 <li>Tegan Brennan, <em>Stevens Institute of Technology</em></li>        
                 <li>Uday Khedker, <em>IIT Bombay</em></li>
             </ul>
