--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 <li>Scott Bauer, <em>Qualcomm</em></li>
                 <li>Tegan Brennan, <em>Stevens Institute of Technology</em></li>        
                 <li>Uday Khedker, <em>IIT Bombay</em></li>
+                <li>Yan Shoshitaishvili, <em>Arizona State University</em></li>
             </ul>
 
             <hr />
