--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <li>Audrey Dutcher, <em>Arizona State University</em></li>
                 <li>Cong Sun, <em>Xidian University</em></li>
                 <li>Dave (Jing) Tian, <em>Purdue University</em></li>
+                <li>Dipanjan Das, <em>University of California, Santa Barbara</em></li>
                 <li>Dongrui Zeng, <em>Pennsylvania State University</em></li>
                 <li>Eric Schulte, <em>Google</em></li>
                 <li>Ganesh Gopalakrishnan, <em>University of Utah</em></li>
