--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 <li>Jordan Wiens, <em>Vector 35</em></li>
                 <li>Jun Xu, <em>University of Utah</em></li>
                 <li>Karine Even-Mendoza, <em>King's College London</em></li>  
+                <li>Michael Heinzl, <em>Independent Researcher</em></li>
                 <li>Peter Goodman, <em>Trail of Bits</em></li>
                 <li>Sang Kil Cha, <em>KAIST</em></li>
                 <li>Santiago Torres-Arias, <em>Purdue University</em></li>
