Fixing page limit on the submissions.
Thank you yuichis@ricsec.co.jp for noticing this.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <p align="justify">All papers must be written in English. Papers must be formatted for US letter size (not A4) paper in a two-column layout, with columns no more than 9.25 in. high and 3.5 in. wide. The text must be in Times font, 10-point or larger, with 11-point or larger line spacing. Authors are strongly encouraged to use the <a href="https://www.ndss-symposium.org/ndss2023/templates/">templates provided by NDSS</a>.</p>
 
-            <p align="justify">We invite both full papers and short papers. Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have less than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
+            <p align="justify">We invite both full papers and short papers. Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have no more than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
 
             <p>Submissions must be properly anonymized for double-blind review (please follow NDSS guidelines on paper anonymization).</p>
 
