--- a/program.html
+++ b/program.html
@@ -99,26 +99,26 @@
                         <td> </td>
                         <td><a href="">Blaze: A Framework for Interprocedural Binary Analysis</a> <br /> 
                         <em>Matthew Revelle, Matt Parker, Kevin Orr (Kudu Dynamics)</em><br />
-                        <a href="2023papers/9/bar2023-final9.pdf">Paper</a>, <a href="2023slides/9_Blaze/Blaze BAR Final.pptx">Slides</a>, <a href="https://github.com/bar2023/paper9_blaze">Code</a></td>
+                        <a style="color:#0000ff" href="2023papers/9/bar2023-final9.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/9_Blaze/Blaze BAR Final.pptx">Slides</a> <a style="color:#00ffff" href="https://github.com/bar2023/paper9_blaze">Code</a></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">RCABench: Open Benchmarking Platform for Root Cause Analysis</a> <br /> 
                         <em>Keisuke Nishimura, Yuichi Sugiyama, Yuki Koike, Masaya Motoda, Tomoya Kitagawa, Toshiki Takatera, Yuma Kurogome (Ricerca Security, Inc.)</em><br />
-                        <a href="2023papers/4/bar2023-final4.pdf">Paper</a>, <a href="2023slides/4/RCABench_slide.pdf">Slides</a>, <a href="https://github.com/bar2023/paper4_RCABench">Code</a><br />
+                        <a style="color:#0000ff" href="2023papers/4/bar2023-final4.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/4/RCABench_slide.pdf">Slides</a> <a style="color:#00ffff" href="https://github.com/bar2023/paper4_RCABench">Code</a><br />
                         <b style="color:#ff0066">Best Paper Award.</b></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">Accurate Compiler and Optimization Independent Function Identification Using Program State Transformations</a> <br /> 
                         <em>Derrick McKee (Purdue University), Nathan Burow (MIT Lincoln Laboratory), Mathias Payer (EPFL)</em><br />
-                        <a href="2023papers/3/bar2023-final3.pdf">Paper</a>, <a href="2023slides/3/NDSS-2023_HexHive.pdf">Slides</a>, <a href="https://github.com/bar2023/paper3_IOVFI">Code</a></td>
+                        <a style="color:#0000ff" href="2023papers/3/bar2023-final3.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/3/NDSS-2023_HexHive.pdf">Slides</a> <a style="color:#00ffff" href="https://github.com/bar2023/paper3_IOVFI">Code</a></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">podft: On Accelerating Dynamic Taint Analysis with Precise Path Optimization</a> <br /> 
                         <em>Zhiyou Tian (Xidian University), Cong Sun (Xidian University), Dongrui Zeng (Palo Alto Networks), Gang Tan (Pennsylvania State University)</em><br />
-                        <a href="2023papers/10/bar2023-final10.pdf">Paper</a>, <a href="2023slides/10_podft/podft-presentation.pdf">Slides</a></td>
+                        <a style="color:#0000ff" href="2023papers/10/bar2023-final10.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/10_podft/podft-presentation.pdf">Slides</a></td>
                     </tr>
 
                     <tr>
@@ -160,25 +160,25 @@
                         <td> </td>
                         <td><a href="">Understanding MPU Usage in Microcontroller-based Systems in the Wild</a> <br /> 
                         <em>Wei Zhou, Zhouqi Jiang (School of Cyber Science and Engineering, Huazhong University of Science and Technology), Le Guan (School of Computing, University of Georgia)</em><br />
-                        <a href="2023papers/7/bar2023-final7.pdf">Paper</a>, <a href="2023slides/7/BAR2023-Slides-Paper7.pdf">Slides</a></td>
+                        <a style="color:#0000ff" href="2023papers/7/bar2023-final7.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/7/BAR2023-Slides-Paper7.pdf">Slides</a></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">FCGAT: Interpretable Malware Classification Method using Function Call Graph and Attention Mechanism</a> <br /> 
                         <em>Minami Someya (Institute of Information Security), Yuhei Otsubo (National Police Academy), Akira Otsuka (Institute of Information Security)</em><br />
-                        <a href="2023papers/5/bar2023-final5.pdf">Paper</a>, <a href="2023slides/5/Slides for Paper5.pdf">Slides</a></td>
+                        <a style="color:#0000ff" href="2023papers/5/bar2023-final5.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/5/Slides for Paper5.pdf">Slides</a></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">PISE: Protocol Inference using Symbolic Execution and Automata Learning</a> <br /> 
                         <em>Ron Marcovich, Orna Grumberg, Gabi Nakibly (Technion, Israel Institute of Technology)</em><br />
-                        <a href="2023papers/2/bar2023-final2.pdf">Paper</a>, <a href="2023slides/2/BAR23-PISE.pdf">Slides</a>, <a href="https://github.com/bar2023/paper2_PISE">Code</a></td>
+                        <a style="color:#0000ff" href="2023papers/2/bar2023-final2.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/2/BAR23-PISE.pdf">Slides</a> <a style="color:#00ffff" href="https://github.com/bar2023/paper2_PISE">Code</a></td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">dewolf: Improving Decompilation by leveraging User Surveys</a> <br /> 
                         <em>Steffen Enders, Eva-Maria C. Behner, Niklas Bergmann, Mariia Rybalka, Elmar Padilla (Fraunhofer FKIE, Germany), Er Xue Hui, Henry Low, Nicholas Sim (DSO National Laboratories, Singapore)</em><br />
-                        <a href="2023papers/1/bar2023-final1.pdf">Paper</a>, <a href="2023slides/1_dewolf/2023-03-03_BAR-dewolf.pdf">Slides</a>, <a href="https://github.com/bar2023/paper1_dewolf">Code</a></td>
+                        <a style="color:#0000ff" href="2023papers/1/bar2023-final1.pdf">Paper</a> <a style="color:#ffff00" href="2023slides/1_dewolf/2023-03-03_BAR-dewolf.pdf">Slides</a> <a style="color:#00ffff" href="https://github.com/bar2023/paper1_dewolf">Code</a></td>
                     </tr>
 
 
