--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BAR 2023</title>
+    <title>BAR 2024</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,14 +16,14 @@
     <!-- Facebook Open Graph -->
     <meta name="og:description" content="">
     <meta name="og:title" content="BAR">
-    <meta name="og:url" content="https://bar2023.github.io">
+    <meta name="og:url" content="https://NDSS-BAR24.github.io">
     <meta name="og:type" content="article">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="BAR">
     <meta name="twitter:description" content="">
-    <meta name="twitter:url" content="https://bar2023.github.io">
+    <meta name="twitter:url" content="https://NDSS-BAR24.github.io">
     
     <meta name="twitter:image" content=""> 
 </head>
@@ -31,11 +31,13 @@
 <body>
     <div class="wrapper">    
         <div class="navbar container">
-            <a id="author-name" class="alignable pull-left" href="">BAR 2023</a>
+            <a id="author-name" class="alignable pull-left" href="">BAR 2024</a>
             <ul id="navlist" class="alignable pull-right navbar-ul">
                 <li class="alignable pull-left nav-list"><a href="/">CFP</a> /
                 </li>
                 <li class="alignable pull-left nav-list"><a href="/program">Program</a> /
+                </li>
+                <li class="alignable pull-left nav-list"><a href="https://bar2023.github.io">BAR'23</a> /
                 </li>
                 <li class="alignable pull-left nav-list"><a href="https://www.ndss-symposium.org/ndss2022/cfp-bar-workshop/">BAR'22</a> /
                 </li>
@@ -50,7 +52,7 @@
 
         <div style="clear:both"></div><hr>    
         <div class="container content">     
-            <h1 id="call-for-papers-workshop-on-binary-analysis-research-bar-2023">Call for Papers: The 2023 Workshop on Binary Analysis Research (BAR'23)</h1>
+            <h1 id="call-for-papers-workshop-on-binary-analysis-research-bar-2024">Call for Papers: The 2024 Workshop on Binary Analysis Research (BAR'24)</h1>
 
             <p align="justify">With the analysis of binary code more relevant than ever due to the proliferation of interconnected embedded devices, closed-source commercial and legacy software, and evasive malware and cyber-threats, the field of binary analysis has recently undergone a renaissance. The last decade has seen the emergence of well over a dozen binary analysis frameworks, leaving our world with more mature binary analysis platforms today than there are web browsers! Academic research groups, government and industrial labs, and independent researchers around the globe continue to push the envelope of binary analysis. Yet, this binary analysis gold rush has evolved in a largely uncoordinated manner, leaving much of our community unconnected and working alone in isolation.</p>
 
@@ -61,10 +63,10 @@
             <h2 id="important-dates">Important Dates</h2>
 
             <ul>
-                <li>Paper submission: <strike>January 3</strike> January 13, 2023 11:59PM Anywhere-on-Earth (AOE)</li>
-                <li>Acceptance notification: February 6, 2023</li>
-                <li>Camera-ready deadline: March 6, 2023 (post workshop)</li>
-                <li>Workshop date: March 3, 2023 (co-located with <a href="https://www.ndss-symposium.org">NDSS 2023</a>)</li>
+                <li><b>Paper submission:</b> Friday, January 5, 2024 by 11:59PM Anywhere-on-Earth (AOE)</li>
+                <li><b>Acceptance notification:</b> Friday, February 6, 2024</li>
+                <li><b>Camera-ready deadline:</b> March 4, 2024 (post workshop)</li>
+                <li><b>Workshop date:</b> Friday, March 1, 2024 (co-located with <a href="https://www.ndss-symposium.org">NDSS 2024</a>)</li>
             </ul>
 
             <hr />
@@ -97,19 +99,19 @@
 
             <h2 id="submission-instructions">Submission Instructions</h2>
 
-            <p align="justify">All papers must be written in English. Papers must be formatted for US letter size (not A4) paper in a two-column layout, with columns no more than 9.25 in. high and 3.5 in. wide. The text must be in Times font, 10-point or larger, with 11-point or larger line spacing. Authors are strongly encouraged to use the <a href="https://www.ndss-symposium.org/ndss2023/templates/">templates provided by NDSS</a>.</p>
+            <p align="justify"><b style="color:#ff8853">We invite both full papers and short papers.</b> Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have no more than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
 
-            <p align="justify">We invite both full papers and short papers. Full papers should have no more than 10 pages in total (excluding references and appendices). Short papers must have no more than 6 pages (again, excluding references and appendices), and can discuss work-in-progress and novel ideas. Short papers will be selected based on their potential to spark interesting discussions during the workshop.</p>
+            <p align="justify">All papers must be written in English. Papers must be formatted for US letter size (not A4) paper in a two-column layout, with columns no more than 9.25 in. high and 3.5 in. wide. The text must be in Times font, 10-point or larger, with 11-point or larger line spacing. Authors are strongly encouraged to use the <a href="https://www.ndss-symposium.org/ndss2023/templates/">templates provided by NDSS</a>.</p>
 
             <p>Submissions must be properly anonymized for double-blind review (please follow NDSS guidelines on paper anonymization).</p>
 
-            <p>Submission site: <a href="https://bar2023.hotcrp.com/">https://bar2023.hotcrp.com/</a></p>
+            <p>Submission site: <a href="https://bar2024.hotcrp.com/">https://bar2024.hotcrp.com/</a></p>
 
             <hr />
 
             <h2 id="workshop-format">Workshop Format</h2>
 
-            <p>BAR will be co-located with NDSS 2023. BAR will be an on-site event.</p>
+            <p>BAR will be an on-site event co-located with NDSS 2024 in San Diego, California.</p>
 
             <p align="justify">One author of each accepted paper is expected to present the paper at the workshop. The format will be traditional conference-style research presentations with questions from the audience. Interactive and engaging presentations are welcomed. Following notification to authors, more information will be provided regarding speaking times and other details.</p>
 
@@ -120,40 +122,15 @@
             <h2 id="program-committee-co-chairs">Workshop Co-Chairs</h2>
 
             <ul>
-                <li>Aravind Machiry, <em>Purdue University</em></li>
                 <li>Stefan Nagy, <em>University of Utah</em></li>
+                <li>Jun Xu, <em>University of Utah</em></li>
             </ul>
 
             <hr />
 
             <h2 id="program-committee">Program Committee</h2>
 
-            <ul>
-                <li>Antonio Bianchi, <em>Purdue University</em></li>
-                <li>Audrey Dutcher, <em>Arizona State University</em></li>
-                <li>Cong Sun, <em>Xidian University</em></li>
-                <li>Dave (Jing) Tian, <em>Purdue University</em></li>
-                <li>Dipanjan Das, <em>University of California, Santa Barbara</em></li>
-                <li>Dongrui Zeng, <em>Pennsylvania State University</em></li>
-                <li>Eric Schulte, <em>Google</em></li>
-                <li>Ganesh Gopalakrishnan, <em>University of Utah</em></li>
-                <li>Ian Smith, <em>Trail of Bits</em></li>
-                <li>Ilya Grishchenko, <em>University of California, Santa Barbara</em></li>
-                <li>Jason Hiser, <em>University of Virginia</em></li>
-                <li>Jingling Xue, <em>UNSW Sydney</em></li>
-                <li>Jordan Wiens, <em>Vector 35</em></li>
-                <li>Jun Xu, <em>University of Utah</em></li>
-                <li>Karine Even-Mendoza, <em>King's College London</em></li>  
-                <li>Michael Heinzl, <em>Independent Researcher</em></li>
-                <li>Peter Goodman, <em>Trail of Bits</em></li>
-                <li>Sang Kil Cha, <em>KAIST</em></li>
-                <li>Santiago Torres-Arias, <em>Purdue University</em></li>
-                <li>Sarah Zennou, <em>Airbus</em></li>
-                <li>Scott Bauer, <em>Qualcomm</em></li>
-                <li>Tegan Brennan, <em>Stevens Institute of Technology</em></li>        
-                <li>Uday Khedker, <em>IIT Bombay</em></li>
-                <li>Yan Shoshitaishvili, <em>Arizona State University</em></li>
-            </ul>
+            <i>Coming soon!</i>
 
             <hr />
         </div>
