Update deadline and PC list

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2 id="important-dates">Important Dates</h2>
 
             <ul>
-                <li><b>Paper submission:</b> Friday, January 5, 2024 by 11:59PM Anywhere-on-Earth (AOE)</li>
+                <li><b>Paper submission:</b> <strike>January 5</strike> January 15, 2024 by 11:59PM Anywhere-on-Earth (AOE)</li>
                 <li><b>Acceptance notification:</b> Friday, February 6, 2024</li>
                 <li><b>Camera-ready deadline:</b> March 4, 2024 (post workshop)</li>
                 <li><b>Workshop date:</b> Friday, March 1, 2024 (co-located with <a href="https://www.ndss-symposium.org">NDSS 2024</a>)</li>
@@ -130,7 +130,25 @@
 
             <h2 id="program-committee">Program Committee</h2>
 
-            <i>Coming soon!</i>
+                <ul>
+                <li>Adam Doupé, <em>Arizona State University</em></li>
+                    <li>Aravind Machiry, <em>Purdue University</em></li>
+                    <li>Chao Zhang, <em>Tsinghua University</em></li>
+                    <li>Cong Sun, <em>Xidian University</em></li>
+                    <li>Dave (Jing) Tian, <em>Purdue University</em></li>
+                    <li>Dipanjan Das, <em>Fortinet Inc.</em></li>
+                    <li>Ian Smith, <em>Trail of Bits</em></li>
+                    <li>Jason Hiser, <em>University of Virginia</em></li>
+                    <li>Jia Song, <em>University of Idaho</em></li>
+                    <li>Karine Even-Mendoza, <em>King's College London</em></li>
+                    <li>Kexin Pei, <em>The University of Chicago</em></li>
+                    <li>Matthew Revelle, <em>Montana State University</em></li>
+                    <li>Michael Heinzl, <em>Independent Researcher</em></li>
+                    <li>Peter Goodman, <em>Trail of Bits</em></li>
+                    <li>Ruoyu Wang <em>Arizona State University</em></li>
+                    <li>Sang Kil Cha, <em>Korea Advanced Institute of Science and Technology (KAIST)</em></li>
+                    <li>Vasileios Kemerlis, <em>Brown University</em>
+                </ul>
 
             <hr />
         </div>
