--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                     <li>Cong Sun, <em>Xidian University</em></li>
                     <li>Dave (Jing) Tian, <em>Purdue University</em></li>
                     <li>Dipanjan Das, <em>Fortinet Inc.</em></li>
+                    <li>Dongrui Zeng, <em>Palo Alto Networks</em></li>
                     <li>Ian Smith, <em>Trail of Bits</em></li>
                     <li>Jason Hiser, <em>University of Virginia</em></li>
                     <li>Jia Song, <em>University of Idaho</em></li>
